# CUDA-im2col-conv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Visualise results.ipynb  compile_n_run.sh  im2col.cu
log/: perflog_after_naive.csv  perflog_before.csv  perflog_write_coalescing.csv
